opens java.text